<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_gravity="center"
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:srcCompat="@drawable/raytechlojistik" />

    <EditText
        android:id="@+id/edtTxtUserName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:hint="@string/user_name"
        android:textColor="#000000"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/edtTxtUserPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:hint="@string/user_password"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:textSize="17sp" />

    <CheckBox
        android:id="@+id/checkRemember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_gravity="right"
        android:text="@string/save"
        android:textSize="17sp"
        android:textStyle="bold" />

    <Button
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:onClick="btnLogin"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnChangeLanguage"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:text="@string/change_language"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold" />


</LinearLayout>
